httpbin/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: dev
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: httpbin
